Upload, Encoding, FE: add upload